[gd_scene load_steps=4 format=2]

[ext_resource path="res://World/Levels/MainMenu.gd" type="Script" id=1]
[ext_resource path="res://GUI/Theme/Theme.tres" type="Theme" id=2]
[ext_resource path="res://Game/CameraMenu.tscn" type="PackedScene" id=3]

[node name="MainMenu" type="Node3D"]
script = ExtResource( 1 )

[node name="CSGBox3D" type="CSGBox3D" parent="."]
transform = Transform3D( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, -0.0885196, 0 )
width = 4.80726
height = 0.155304
depth = 6.35494

[node name="CSGBox2" type="CSGBox3D" parent="."]
transform = Transform3D( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0.0122252, -0.0740791, -4.68413 )
width = 21.7148
height = 8.71174
depth = 3.73735

[node name="GUI" type="Control" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
theme = ExtResource( 2 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="P" type="Panel" parent="GUI"]
anchor_left = 0.826
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -0.920044
__meta__ = {
"_edit_use_anchors_": false
}

[node name="List" type="VBoxContainer" parent="GUI/P"]
anchor_right = 1.0
anchor_bottom = 1.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="btNew" type="Button" parent="GUI/P"]
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_top = -45.0
text = "NEW CHARACTER"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="vb" type="VBoxContainer" parent="GUI"]
visible = false
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -163.0
offset_top = -70.0
offset_right = 162.0
offset_bottom = -16.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="GUI/vb"]
offset_right = 325.0
offset_bottom = 19.0
align = 1

[node name="btPlay" type="Button" parent="GUI/vb"]
offset_top = 23.0
offset_right = 325.0
offset_bottom = 54.0
text = "PLAY"

[node name="CameraMenu" parent="." instance=ExtResource( 3 )]
transform = Transform3D( 1, 0, 0, 0, 0.999548, 0.0300676, 0, -0.0300676, 0.999548, -0.0280299, 1.22448, 2.37897 )

[node name="DirectionalLight3D" type="DirectionalLight3D" parent="."]
transform = Transform3D( 0.847882, 0.196954, -0.492246, 0, 0.92844, 0.371481, 0.530186, -0.314972, 0.787208, -1.72866, 0.00444174, 0.9622 )
light_color = Color( 0.670588, 0.670588, 0.670588, 1 )
shadow_enabled = true
[connection signal="pressed" from="GUI/P/btNew" to="." method="_on_btNew_pressed"]
[connection signal="pressed" from="GUI/vb/btPlay" to="." method="_on_btPlay_pressed"]
